<resources>
    <string name="app_name">3-5-TableLayout</string>
    <string name="editText1">Number 1</string>
    <string name="editText2">Number 2</string>

    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>

    <string name="add">Add</string>
    <string name="sub">Subtract</string>
    <string name="mul">Multiply</string>
    <string name="div">Divide</string>

    <string name="selectEditText">Please Select Any Number Field first.</string>

</resources>
